--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "author": "Jay Ji",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^4.6.2",
+    "@polkadot/api": "^6",
     "@subql/types": "latest",
-    "typescript": "^4.1.3",
+    "typescript": "4.4.4",
     "@subql/cli": "latest"
   }
 }
