--- a/khala/project.yaml
+++ b/khala/project.yaml
@@ -1,5 +1,5 @@
 specVersion: 0.2.0
-name: SubQuery Dictionary - Khala Network
+name: SubQuery Dictionary - Khala
 version: 1.0.0
 description: >-
   A SubQuery Dictionary Project that provides increased indexing speed to all projects
