--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "subql-dictionary",
   "version": "1.0.0",
-  "description": "A subquery project provide dictionary data & service for a substrate-based network",
+  "description": "A SubQuery Dictionary Project that provides increased indexing speed to all projects",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -b",
@@ -10,19 +10,19 @@
     "codegen": "./node_modules/.bin/subql codegen",
     "start:docker": "docker-compose pull && docker-compose up --remove-orphans"
   },
-  "homepage": "https://github.com/subquery/subql-starter",
-  "repository": "github:subquery/subql-starter",
+  "homepage": "https://github.com/subquery/subql-dictionary",
+  "repository": "github:subquery/subql-dictionary",
   "files": [
     "dist",
     "schema.graphql",
     "project.yaml"
   ],
-  "author": "Jay Ji",
+  "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^6",
+    "@polkadot/api": "^7",
     "@subql/types": "latest",
-    "typescript": "4.4.4",
+    "typescript": "^4.1.3",
     "@subql/cli": "latest"
   }
 }
