convert multiline description string to single line string

--- a/astar/project.yaml
+++ b/astar/project.yaml
@@ -1,8 +1,7 @@
 specVersion: 0.2.0
 name: SubQuery Dictionary - Astar
 version: 1.0.0
-description: >-
-  A SubQuery Dictionary Project that provides increased indexing speed to all projects
+description: "A SubQuery Dictionary Project that provides increased indexing speed to all projects"
 repository: https://github.com/subquery/subql-dictionary
 schema:
   file: ./schema.graphql
