--- a/astar/package.json
+++ b/astar/package.json
@@ -19,11 +19,17 @@
   ],
   "author": "SubQuery Network",
   "license": "Apache-2.0",
+  "resolutions": {
+    "@polkadot/api": "7.8.1",
+    "@polkadot/types": "7.8.1",
+    "@polkadot/util": "8.4.1"
+  },
   "devDependencies": {
-    "@polkadot/api": "^7",
+    "@polkadot/api": "7.8.1",
+    "@subql/cli": "latest",
+    "@subql/contract-processors": "0.5.3",
     "@subql/types": "latest",
-    "typescript": "^4.1.3",
-    "@subql/cli": "latest"
+    "typescript": "^4.4.4"
   },
   "exports": {
     "chaintypes": "src/chaintypes.ts"
