--- a/polkadot/docker-compose.yml
+++ b/polkadot/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: postgres
 
   subquery-node:
-    image: onfinality/subql-node:latest
+    image: onfinality/subql-node:v0.28.2-0
     depends_on:
       - "postgres"
     restart: always
@@ -25,6 +25,7 @@ services:
       - ./:/app
     command:
       - -f=/app
+      - --batch-size=2
 
   graphql-engine:
     image: onfinality/subql-query:latest
