--- a/polkadot/project.yaml
+++ b/polkadot/project.yaml
@@ -10,7 +10,7 @@ network:
   endpoint: wss://polkadot.api.onfinality.io/public-ws
 dataSources:
   - kind: substrate/Runtime
-    startBlock: 1
+    startBlock: 8197000
     mapping:
       file: ./dist/index.js
       handlers:
