--- a/acala/package.json
+++ b/acala/package.json
@@ -4,7 +4,7 @@
   "description": "A SubQuery Dictionary Project that provides increased indexing speed to all projects",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc -b",
+    "build": "subql build",
     "prepack": "rm -rf dist && npm build",
     "test": "jest",
     "codegen": "./node_modules/.bin/subql codegen",
@@ -20,13 +20,21 @@
   "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@acala-network/type-definitions": "latest",
     "@polkadot/api": "^7",
-    "@subql/types": "latest",
-    "typescript": "^4.1.3",
     "@subql/cli": "latest",
-    "@acala-network/type-definitions": "latest"
+    "@subql/types": "file:.yalc/@subql/types",
+    "@types/lodash": "^4.14.182",
+    "typescript": "^4.1.3"
   },
   "exports": {
     "chaintypes": "src/chaintypes.ts"
+  },
+  "dependencies": {
+    "@subql/acala-evm-processor": "file:.yalc/@subql/acala-evm-processor",
+    "lodash": "^4.17.21"
+  },
+  "resolutions": {
+    "@subql/types": "file:.yalc/@subql/types"
   }
 }
