--- a/acala/package.json
+++ b/acala/package.json
@@ -31,10 +31,7 @@
     "chaintypes": "src/chaintypes.ts"
   },
   "dependencies": {
-    "@subql/acala-evm-processor": "file:.yalc/@subql/acala-evm-processor",
+    "@subql/acala-evm-processor": "^0.0.1-0",
     "lodash": "^4.17.21"
-  },
-  "resolutions": {
-    "@subql/types": "file:.yalc/@subql/types"
   }
 }
