--- a/karura/package.json
+++ b/karura/package.json
@@ -20,13 +20,16 @@
   "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@acala-network/type-definitions": "latest",
     "@polkadot/api": "^8",
-    "@subql/types": "latest",
-    "typescript": "^4.1.3",
     "@subql/cli": "latest",
-    "@acala-network/type-definitions": "latest"
+    "@subql/types": "latest",
+    "typescript": "^4.1.3"
   },
   "exports": {
     "chaintypes": "src/chaintypes.ts"
+  },
+  "dependencies": {
+    "@subql/acala-evm-processor": "^0.0.2"
   }
 }
