--- a/karura/package.json
+++ b/karura/package.json
@@ -31,5 +31,8 @@
   },
   "dependencies": {
     "@subql/acala-evm-processor": "^0.0.2"
+  },
+  "resolutions": {
+    "ipfs-unixfs": "6.0.6"
   }
 }
