--- a/astar/package.json
+++ b/astar/package.json
@@ -22,7 +22,8 @@
   "resolutions": {
     "@polkadot/api": "8.2.1",
     "@polkadot/types": "7.8.1",
-    "@polkadot/util": "8.4.1"
+    "@polkadot/util": "8.4.1",
+    "ipfs-unixfs": "6.0.6"
   },
   "devDependencies": {
     "@polkadot/api": "^8",
