--- a/contextfree/project.yaml
+++ b/contextfree/project.yaml
@@ -21,7 +21,7 @@ network:
     file: ./dist/chaintypes.js
 dataSources:
   - kind: substrate/Runtime
-    startBlock: 1
+    startBlock: 
     mapping:
       file: ./dist/index.js
       handlers:
