--- a/contextfree/package.json
+++ b/contextfree/package.json
@@ -20,7 +20,7 @@
   "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^8",
+    "@polkadot/api": "8.12.2",
     "@subql/types": "latest",
     "typescript": "^4.1.3",
     "@subql/cli": "latest"
