--- a/shibuya/package.json
+++ b/shibuya/package.json
@@ -19,19 +19,18 @@
   ],
   "author": "SubQuery Network",
   "license": "Apache-2.0",
+  "resolutions": {
+    "@polkadot/api": "9.2.4",
+    "ipfs-unixfs": "6.0.6"
+  },
   "devDependencies": {
-    "@polkadot/api": "9.1.1",
+    "@polkadot/api": "9.2.4",
+    "@subql/cli": "latest",
+    "@subql/contract-processors": "0.5.3",
     "@subql/types": "latest",
-    "typescript": "^4.1.3",
-    "@subql/cli": "latest"
+    "typescript": "^4.4.4"
   },
   "exports": {
     "chaintypes": "src/chaintypes.ts"
-  },
-  "resolutions": {
-    "ipfs-unixfs": "6.0.6"
-  },
-  "dependencies": {
-    "loadash": "^1.0.0"
   }
 }
