--- a/shiden/package.json
+++ b/shiden/package.json
@@ -19,19 +19,16 @@
   ],
   "author": "SubQuery Network",
   "license": "Apache-2.0",
-  "devDependencies": {
-    "@polkadot/api": "9.1.1",
-    "@subql/types": "latest",
-    "typescript": "^4.1.3",
-    "@subql/cli": "latest"
-  },
-  "exports": {
-    "chaintypes": "src/chaintypes.ts"
-  },
   "resolutions": {
+    "@polkadot/api": "9.2.4",
     "ipfs-unixfs": "6.0.6"
   },
-  "dependencies": {
-    "loadash": "^1.0.0"
+  "devDependencies": {
+    "@polkadot/api": "9.2.4",
+    "@subql/cli": "latest",
+    "@subql/frontier-evm-processor": "0.1.2",
+    "@subql/types": "latest",
+    "typescript": "^4.4.4",
+    "abab": "latest"
   }
 }
