--- a/.github/workflows/cli-deploy.yml
+++ b/.github/workflows/cli-deploy.yml
@@ -36,4 +36,9 @@ jobs:
       run: yarn codegen
     - name: Publish and Deploy
       run: |
-        sh .github/workflows/scripts/publish-deploy.sh -f ${{ github.event.inputs.directory }}/${{ github.event.inputs.projectYAML}} -o ${{github.repository}} -r ${{github.workspace}} -p ${{github.event.inputs.projectName}}
+        sh .github/workflows/scripts/publish-deploy.sh |
+        -f ${{ github.event.inputs.directory }} 
+        -o ${{github.repository}} 
+        -r ${{github.workspace}} 
+        -p ${{github.event.inputs.projectName}}
+        -y ${{ github.event.inputs.projectYAML }}
