--- a/astar/docker-compose.yml
+++ b/astar/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - ./:/app
     command:
       - -f=/app
-
+      - --disable-historical=true
   graphql-engine:
     image: onfinality/subql-query:latest
     ports:
