--- a/moonbeam-evm/package.json
+++ b/moonbeam-evm/package.json
@@ -4,10 +4,11 @@
   "description": "subquery diction for moonbase-alpha and moonriver",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist && tsc -b",
+    "build": "subql build",
     "prepack": "rm -rf dist && npm build",
     "test": "jest",
-    "codegen": "subql codegen"
+    "codegen": "subql codegen",
+    "start:docker": "docker-compose pull && docker-compose up --remove-orphans"
   },
   "homepage": "https://github.com/subquery/moonbeam-dictionary",
   "repository": "github:subquery/moonbeam-dictionary",
@@ -19,17 +20,14 @@
   "author": "Ian He",
   "license": "Apache-2.0",
   "resolutions": {
-    "@polkadot/api": "8.2.1",
-    "@polkadot/types": "8.2.1",
-    "@polkadot/util": "10.0.2",
     "ipfs-unixfs": "6.0.6"
   },
   "devDependencies": {
-    "@polkadot/api": "8.2.1",
-    "@subql/types":"0.14.0",
+    "@polkadot/api": "9.4.2",
+    "@subql/types":"latest",
     "typescript": "^4.6.2",
     "@subql/cli": "latest",
-    "moonbeam-types-bundle": "2.0.7",
-    "@subql/contract-processors": "0.5.4"
+    "moonbeam-types-bundle": "^2.0.7",
+    "@subql/frontier-evm-processor": "^0.1.2"
   }
 }
