--- a/statemine/docker-compose.yml
+++ b/statemine/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ./:/app
     command:
       - -f=/app
+      - --disable-historical=true
 
   graphql-engine:
     image: onfinality/subql-query:latest
