--- a/statemint/docker-compose.yml
+++ b/statemint/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - ./:/app
     command:
       - -f=/app
-      - --local
+      - --disable-historical=true
 
   graphql-engine:
     image: onfinality/subql-query:latest
