--- a/moonbeam-evm/package.json
+++ b/moonbeam-evm/package.json
@@ -17,6 +17,9 @@
     "schema.graphql",
     "project.yaml"
   ],
+  "exports": {
+    "chaintypes": "src/chaintypes.ts"
+  },
   "author": "Ian He",
   "license": "Apache-2.0",
   "resolutions": {
