--- a/moonbeam-evm/package.json
+++ b/moonbeam-evm/package.json
@@ -27,10 +27,11 @@
   },
   "devDependencies": {
     "@polkadot/api": "^9",
-    "@subql/types":"latest",
-    "typescript": "^4.6.2",
     "@subql/cli": "latest",
+    "@subql/frontier-evm-processor": "latest",
+    "@subql/types": "latest",
+    "abab": "latest",
     "moonbeam-types-bundle": "^2.0.7",
-    "@subql/frontier-evm-processor": "latest"
+    "typescript": "^4.6.2"
   }
 }
