--- a/astar/package.json
+++ b/astar/package.json
@@ -27,7 +27,7 @@
     "@subql/cli": "latest",
     "@subql/frontier-evm-processor": "0.1.2",
     "@subql/types": "latest",
-    "typescript": "^4.4.4",
-    "abab": "latest"
+    "abab": "latest",
+    "typescript": "^4.4.4"
   }
 }
