--- a/astar/package.json
+++ b/astar/package.json
@@ -23,9 +23,9 @@
     "ipfs-unixfs": "6.0.6"
   },
   "devDependencies": {
-    "@polkadot/api": "^9",
+    "@polkadot/api": "^10",
     "@subql/cli": "latest",
-    "@subql/frontier-evm-processor": "0.1.2",
+    "@subql/frontier-evm-processor": "^0.1.3",
     "@subql/types": "latest",
     "abab": "latest",
     "typescript": "^4.4.4"
