--- a/acala/package.json
+++ b/acala/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@subql/acala-evm-processor": "^0.1.3",
+    "abab": "^2.0.6",
     "lodash": "^4.17.21"
   },
   "resolutions": {
