--- a/moonbeam/package.json
+++ b/moonbeam/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@polkadot/api": "^9",
     "@subql/cli": "latest",
-    "@subql/frontier-evm-processor": "dev",
+    "@subql/frontier-evm-processor": "0.1.3",
     "@subql/types": "latest",
     "abab": "latest",
     "moonbeam-types-bundle": "^2.0.7",
