--- a/acala/package.json
+++ b/acala/package.json
@@ -21,10 +21,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@acala-network/type-definitions": "latest",
-    "@polkadot/api": "^9",
+    "@polkadot/api": "10.1.4",
     "@subql/cli": "latest",
-    "@subql/types": "^1.0.1-0",
-    "@types/lodash": "^4.14.182",
+    "@subql/types": "latest",
     "typescript": "^4.1.3"
   },
   "exports": {
