--- a/astar/package.json
+++ b/astar/package.json
@@ -23,7 +23,7 @@
     "ipfs-unixfs": "6.0.6"
   },
   "devDependencies": {
-    "@polkadot/api": "^10",
+    "@polkadot/api": "10.1.4",
     "@subql/cli": "latest",
     "@subql/frontier-evm-processor": "^0.1.3",
     "@subql/types": "latest",
