--- a/nodle-parachain/package.json
+++ b/nodle-parachain/package.json
@@ -20,7 +20,7 @@
   "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^9",
+    "@polkadot/api": "10.1.4",
     "@subql/types": "latest",
     "typescript": "^4.1.3",
     "@subql/cli": "latest"
