--- a/astar/package.json
+++ b/astar/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@polkadot/api": "^10",
     "@subql/cli": "latest",
-    "@subql/frontier-evm-processor": "latest",
+    "@subql/frontier-evm-processor": "^0.1.4",
     "@subql/types": "latest",
     "abab": "latest",
     "typescript": "^4.4.4"
