--- a/aleph-zero/package.json
+++ b/aleph-zero/package.json
@@ -20,10 +20,10 @@
   "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^9",
+    "@polkadot/api": "10.1.4",
+    "@subql/cli": "latest",
     "@subql/types": "latest",
-    "typescript": "^4.1.3",
-    "@subql/cli": "latest"
+    "typescript": "^5.0.4"
   },
   "resolutions": {
     "ipfs-unixfs": "6.0.6"
