--- a/acala/package.json
+++ b/acala/package.json
@@ -23,6 +23,7 @@
     "@acala-network/type-definitions": "latest",
     "@polkadot/api": "10.1.4",
     "@subql/cli": "latest",
+    "@subql/testing": "^2.0.1",
     "@subql/types": "latest",
     "typescript": "^4.1.3"
   },
@@ -30,7 +31,7 @@
     "chaintypes": "src/chaintypes.ts"
   },
   "dependencies": {
-    "@subql/acala-evm-processor": "^0.1.3",
+    "@subql/acala-evm-processor": "^0.1.4",
     "abab": "^2.0.6",
     "lodash": "^4.17.21"
   },
