--- a/kilt-spiritnet/package.json
+++ b/kilt-spiritnet/package.json
@@ -23,9 +23,13 @@
     "@polkadot/api": "10.1.4",
     "@subql/cli": "latest",
     "@subql/types": "latest",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "@kiltprotocol/type-definitions": "0.33.1"
   },
   "resolutions": {
     "ipfs-unixfs": "6.0.6"
+  },
+  "exports": {
+    "chaintypes": "src/chaintypes.ts"
   }
 }
