--- a/bifrost-parachain/package.json
+++ b/bifrost-parachain/package.json
@@ -20,16 +20,19 @@
   "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^9",
-    "@subql/types": "latest",
-    "typescript": "^4.1.3",
+    "@bifrost-finance/type-definitions": "latest",
+    "@polkadot/api": "^10.9.1",
     "@subql/cli": "latest",
-    "@bifrost-finance/type-definitions": "latest"
+    "@subql/types": "latest",
+    "typescript": "^5.1.6"
   },
   "exports": {
     "chaintypes": "src/chaintypes.ts"
   },
   "resolutions": {
     "ipfs-unixfs": "6.0.6"
+  },
+  "dependencies": {
+    "@open-web3/orml-type-definitions": "^2.0.1"
   }
 }
