Remove promise.all for for loop, update project.yaml node runner specs

--- a/moonbeam-evm/project_moonbeam-alpha.yaml
+++ b/moonbeam-evm/project_moonbeam-alpha.yaml
@@ -5,6 +5,10 @@ runner:
   node:
     name: '@subql/node'
     version: '*'
+    options:
+      unfinalizedBlocks: false
+      historical: false
+
   query:
     name: '@subql/query'
     version: '*'
