--- a/statemint/project.yaml
+++ b/statemint/project.yaml
@@ -5,6 +5,9 @@ runner:
   node:
     name: '@subql/node'
     version: '*'
+    options:
+      unfinalizedBlocks: false
+      historical: false
   query:
     name: '@subql/query'
     version: '*'
