--- a/bifrost-parachain/project.yaml
+++ b/bifrost-parachain/project.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 runner:
   node:
     name: '@subql/node'
-    version: '*'
+    version: '>=3.0.0'
     options:
       unfinalizedBlocks: false
       historical: false
