chore: 🤖 export chainTypes and set schema to public

--- a/polymesh/docker-compose.yml
+++ b/polymesh/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - ./:/app
     command:
       - -f=/app
+      - --db-schema=public
       - --disable-historical=true
 
   graphql-engine:
@@ -43,5 +44,5 @@ services:
       DB_HOST: postgres
       DB_PORT: 5432
     command:
-      - --name=app
+      - --name=public
       - --playground
