update all to use ts strict

--- a/astar/tsconfig.json
+++ b/astar/tsconfig.json
@@ -14,6 +14,7 @@
   },
   "include": [
     "src/**/*",
-    "node_modules/@subql/types/dist/global.d.ts"
-  ]
+    "node_modules/@subql/types-core/dist/global.d.ts",
+    "node_modules/@subql/types/dist/global.d.ts",
+  ],
 }
