--- a/zeitgeist/tsconfig.json
+++ b/zeitgeist/tsconfig.json
@@ -8,12 +8,13 @@
     "resolveJsonModule": true,
     "module": "commonjs",
     "outDir": "dist",
-    "rootDir": ".",
+    "rootDir": "src",
     "target": "es2017",
-    "strict": true
+    "strict": true,
   },
   "include": [
     "src/**/*",
-    "node_modules/@subql/types/dist/global.d.ts"
-  ]
+    "node_modules/@subql/types-core/dist/global.d.ts",
+    "node_modules/@subql/types/dist/global.d.ts",
+  ],
 }
