--- a/acala/package.json
+++ b/acala/package.json
@@ -23,8 +23,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@acala-network/types": "^6.1.2",
-    "@polkadot/api": "^11",
+    "@polkadot/api": "^13",
     "@subql/cli": "latest",
+    "@subql/common-substrate": "^4.3.4",
     "@subql/testing": "latest",
     "@subql/types": "latest",
     "typescript": "^4.1.3"
