--- a/parallel/package.json
+++ b/parallel/package.json
@@ -21,11 +21,12 @@
   "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^9",
-    "@subql/types": "latest",
-    "typescript": "^4.1.3",
+    "@parallel-finance/type-definitions": "latest",
+    "@polkadot/api": "^13",
     "@subql/cli": "latest",
-    "@parallel-finance/type-definitions": "latest"
+    "@subql/common-substrate": "^4.3.4",
+    "@subql/types": "latest",
+    "typescript": "^4.1.3"
   },
   "exports": {
     "chaintypes": "src/chaintypes.ts"
