--- a/quartz/package.json
+++ b/quartz/package.json
@@ -21,15 +21,14 @@
   "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^9",
-    "@subql/types": "latest",
-    "typescript": "^4.1.3",
+    "@polkadot/api": "^13",
     "@subql/cli": "latest",
-    "@unique-nft/types": "latest"
+    "@subql/common-substrate": "^4.3.4",
+    "@subql/types": "latest",
+    "@unique-nft/types": "latest",
+    "typescript": "^4.1.3"
   },
-  "exports": {
-    "chaintypes": "src/chaintypes.ts"
-  },
+  "exports": {},
   "resolutions": {
     "ipfs-unixfs": "6.0.6"
   }
