--- a/statemine/package.json
+++ b/statemine/package.json
@@ -21,10 +21,11 @@
   "author": "SubQuery Network",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^9",
+    "@polkadot/api": "^13",
+    "@subql/cli": "latest",
+    "@subql/common-substrate": "^4.3.4",
     "@subql/types": "latest",
-    "typescript": "^4.1.3",
-    "@subql/cli": "latest"
+    "typescript": "^4.1.3"
   },
   "resolutions": {
     "ipfs-unixfs": "6.0.6"
