Add parent references, update CIDs

--- a/astar/project_shiden.yaml
+++ b/astar/project_shiden.yaml
@@ -30,3 +30,6 @@ dataSources:
       handlers:
         - handler: handleBlock
           kind: substrate/BlockHandler
+parent:
+  reference: "QmPiTswpMTeipwnmJkAcwkcg5Se8XfrucGYVKbwuAxQgJ6"
+  untilBlock: 7988164
