--- a/astar/project.yaml
+++ b/astar/project.yaml
@@ -28,3 +28,6 @@ dataSources:
       handlers:
         - handler: handleBlock
           kind: substrate/BlockHandler
+parent:
+  reference: "QmapQ6cNKPtZE1jkeUp5V6xy7sPSiJiZpoqZcRRtyc4Stq"
+  untilBlock: 7550923
