--- a/moonbeam-evm/project.yaml
+++ b/moonbeam-evm/project.yaml
@@ -22,6 +22,9 @@ network:
   endpoint: 'wss://moonbeam.api.onfinality.io/public-ws'
   chaintypes:
     file: ./dist/chaintypes.js
+parent:
+  reference: QmUHAsweQYXYrY5Swbt1eHkUwnE5iLc7w9Fh62JY6guXEK
+  untilBlock: 9267518
 dataSources:
   - kind: substrate/Runtime
     startBlock: 1
